# mp4-inject-sensor-data

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  makefile  run.sh
src/: GPMF_demo.c  GPMF_demo.cpp  GPMF_parser.h  GPMF_print.c  GPMF_print.h  GPMF_writer.c  main.cpp  server.cpp
